--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = C:\Users\Clarence\AppData\Local\Programs\Python\Python311
+home = C:\Users\ASUSTeK\AppData\Local\Programs\Python\Python310
 include-system-site-packages = false
-version = 3.11.0
-executable = C:\Users\Clarence\AppData\Local\Programs\Python\Python311\python.exe
-command = C:\Users\Clarence\AppData\Local\Programs\Python\Python311\python.exe -m venv C:\Kuliah\Semester 5\KG\TK\frontend\env
+version = 3.10.7
