--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,12 @@
 {
+    "builds": [
+      {
+        "src": "Airports/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb" }
+
+      }
+    ],
     "routes": [
       {
         "src": "/(.*)",
